--- a/JiaoBaoYun-hb/html/quan/leave-reply.html
+++ b/JiaoBaoYun-hb/html/quan/leave-reply.html
@@ -24,7 +24,7 @@
 		</header>
 		<div class="mui-content mo-background-color">
 			<div class="input-content">
-				<textarea id='content' class="mui-input-clear question" placeholder="留言" style="height: 200px;"></textarea>
+				<textarea id='content' class="mui-input-clear question" placeholder="留言..." style="height: 200px;"></textarea>
 			</div>
 		</div>
 	</body>
