--- a/JiaoBaoYun-hb/html/quan/pub-leave.html
+++ b/JiaoBaoYun-hb/html/quan/pub-leave.html
@@ -32,7 +32,7 @@
 		</header>
 		<div class="mui-content">
 				<div class="input-content">
-				<textarea id='content' class="mui-input-clear question" placeholder="留言" style="height: 200px;"></textarea>
+				<textarea id='content' class="mui-input-clear question" placeholder="留言..." style="height: 200px;"></textarea>
 			</div>
 		</div>
 	</body>
