班级群组更新备注

--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -144,7 +144,7 @@
 				<p></p>
 				<div class="mui-input-row row1">
 					<!--<label style="font-size: 15px;">账号</label>-->
-					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="账号/手机号码">
+					<input id='account' type="number" class="mui-input-clear mui-input" placeholder="账号/手机号码">
 				</div>
 				<div class="mui-input-row ">
 					<!--<label style="font-size: 15px;">密码</label>-->
