--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
@@ -262,7 +262,7 @@
 					'</h4><h5>' +
 					record.AnswerContent +
 					'</h5>' +
-					'<p class="mui-h6 mui-ellipsis">' + record.IsLikeNum + '赞 ' + record.CommentNum + '评论 ' + record.AnswerTime +
+					'<p class="mui-h6 mui-ellipsis">' + record.IsLikeNum + '赞 ' + record.CommentNum + '评论 ' + modifyTimeFormat(record.AnswerTime) +
 					'</p></div></div>';
 				listContainer.appendChild(li);
 			}
