--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-inviteAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-inviteAnswer.html
@@ -14,7 +14,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">邀请他回答</h1>
+			<h1 class="mui-title">邀请回答</h1>
 		</header>
 		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
 			<div class="mui-scroll-wrapper">
