--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -38,12 +38,11 @@
 			<form class="mui-input-group">
 				<div class="mui-input-row row1">
 					<label style="font-size: 15px;">手机号</label>
-					<input type="text" id="phoneNumber" placeholder="请输入手机号" readonly="readonly" style="color: gray;">
-					<input type="text" id="phoneNumber" placeholder="请输入手机号">
+					<input type="number" id="phoneNumber" placeholder="请输入手机号" readonly="readonly" style="color: gray;">
 				</div>
 				<div class="mui-input-row">
 					<label style="font-size: 15px;">验证码</label>
-					<input type="text" id="yanzheng" placeholder="请输入验证码">
+					<input type="number" id="yanzheng" placeholder="请输入验证码">
 				</div>
 			</form>
 			<div class="mui-content-padded">
