--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
@@ -218,7 +218,7 @@
 				li.className = 'mui-table-view-cell';
 				li.id = 'li' + index;
 				//拼接显示
-				li.innerHTML = "<p>" + record.CommentContent + "</p><div><p><img src='" + getChannelIcon(record) + "'>[" + record.AskChannel + ']' + record.AskTitle + "</p><p>" + record.AnswerContent + "</p></div><p>" + record.LikeNum + " 赞 · " + record.CommentDate + '</p>';
+				li.innerHTML = "<p>" + record.CommentContent + "</p><div><p><img src='" + getChannelIcon(record) + "'>[" + record.AskChannel + ']' + record.AskTitle + "</p><p>" + record.AnswerContent + "</p></div><p>" + record.LikeNum + " 赞 · " + modifyTimeFormat(record.CommentDate) + '</p>';
 
 				listContainer.appendChild(li);
 			}
