--- a/JiaoBaoYun-hb/html/cloud/storage_transport.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_transport.html
@@ -90,7 +90,7 @@
 										<div id="downloadnum" style="padding:5px;">
 											下载中
 										</div>
-										<div style="height: 1px;width: 100%;background: #d9d9d9;"></div>
+										<div style="height: 1px;width: 100%;background: #E4E4E4;"></div>
 									</div>
 									<div id="download">
 										<!--<li class="mui-table-view-cell mui-media">
@@ -141,7 +141,7 @@
 										<div id="downloadednum" style="padding:5px;">
 											已下载
 										</div>
-										<div style="height: 1px;width: 100%;background: #d9d9d9;"></div>
+										<div style="height: 1px;width: 100%;background: #E4E4E4;"></div>
 									</div>
 									<div id="downloaded">
 										<!--<li class="mui-table-view-cell mui-media">
@@ -188,7 +188,7 @@
 										<div id="uploadnum" style="padding:5px;">
 											上传中
 										</div>
-										<div style="height: 1px;width: 100%;background: #d9d9d9;"></div>
+										<div style="height: 1px;width: 100%;background: #E4E4E4;"></div>
 									</div>
 									<div id="upload">
 										<!--<li class="mui-table-view-cell mui-media">
@@ -239,7 +239,7 @@
 										<div id="uploadednum" style="padding:5px;">
 											已上传
 										</div>
-										<div style="height: 1px;width: 100%;background: #d9d9d9;"></div>
+										<div style="height: 1px;width: 100%;background: #E4E4E4;"></div>
 									</div>
 									<div id="uploaded">
 										<!--<li class="mui-table-view-cell mui-media">
