--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -62,7 +62,7 @@
 				padding-left: 0px;
 				line-height: 40px;
 				font-size: 15px;
-				color: black;
+				color: #808080;
 			}
 
 			#arrowdown {
@@ -87,7 +87,7 @@
 			.mui-icon-arrowdown {
 				/*margin-left: 5px;*/
 				/*float: left;*/
-				color: black;
+				color: #B7B7B7;
 			}
 
 			.mui-bar .mui-icon {
@@ -113,6 +113,11 @@
 				/*popover的三角形箭头*/
 				background-color: white;
 				box-shadow: 0 0 5px rgba(0, 0, 0, .1);
+			}
+
+			.mui-checkbox input[type=checkbox]:checked:before,
+			.mui-radio input[type=radio]:checked:before {
+				color: #1DB8F1
 			}
 		</style>
 	</head>
