--- a/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_sub.html
@@ -3,16 +3,12 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Hello MUI</title>
+		<title></title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
-		<!--<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />-->
-		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
-		<script type="text/javascript" src="../../js/utils/events.js"></script>
-		<script type="text/javascript" src="../../js/quan/studentdynamic.js"></script>
+		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<style>
 			body,
 			.mui-content {
@@ -40,39 +36,31 @@
 				height: 0px;
 			}
 
-			.mui-table-view-cell {
+			.mui-col-sm-10 {
 				background: #EEEEEE;
-				padding: 2px;
-				padding-left: 2px;
-				padding-right: 2px;
+			}
+
+			.mui-table-view-cell {
+				padding: 0px;
+				margin: 5px 10px;
 			}
 
 			.mui-table-view-cell.mui-active {
 				background: #D9D9D9;
 			}
 
-			.dynamic-ellipsis-2 {
-				/*设置多于2行省略号*/
+			.dynamic-ellipsis-show {
 				overflow: hidden;
 				text-overflow: ellipsis;
 				display: -webkit-box;
-				/*-webkit-line-clamp: 2;*/
-				/*设置多于2行省略号*/
+				-webkit-line-clamp: initial;
 				-webkit-box-orient: vertical;
-				color: black;
-				margin: 2px;
-				margin-left: 8px;
-				margin-right: 2px;
-				/*margin: 3px;*/
-				/*border:  5px solid #ececec;*/
-				background: transparent;
-				font-size: 14px;
+				font-size: 1.5rem;
+				line-height: 24px;
 			}
 
 			.dynamic-date {
 				/*日期*/
-				text-align: left;
-				/*居中*/
 				font-weight: bold;
 				/*加粗*/
 				margin-top: 4px;
@@ -80,6 +68,33 @@
 
 			.mui-row {
 				margin: 11px 15px;
+				word-break: break-all;
+			}
+
+			.record-imge {
+				width: 100%;
+			}
+
+			.record-picture {
+				overflow: hidden;
+				position: relative;
+				float: left;
+				text-align: center;
+			}
+
+			.record-picture-num {
+				/*剩余图片数量*/
+				position: absolute;
+				color: white;
+				background-color: rgba(0, 0, 0, .3);
+				width: 100%;
+				font-size: 25px;
+			}
+
+			.show-all {
+				/*display: none;*/
+				color: #CCCCCC;
+				font-size: 1.4rem;
 			}
 		</style>
 	</head>
@@ -89,216 +104,272 @@
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--数据列表-->
-				<ul class="mui-table-view">
-					<div id="top">
-						<div id="add">
-							<font style="margin-left: 5%;">
-								<span class="mui-icon mui-icon-camera" style="color: #A9A9A9;">
-							</font>
-							<font style="margin-left: 2px;color:#007AFF ;">
-								丨
-							</font>
-							<font style="margin-left: 2px;color: #A9A9A9;">
-								记录生活，留下美好...
-							</font>
-						</div>
-						<img src="../../image/cloud/notes_bg2.jpg" style="width: 100%;" />
+				<div id="top">
+					<div id="add">
+						<font style="margin-left: 5%;">
+							<span class="mui-icon mui-icon-camera" style="color: #A9A9A9;"></span>
+						</font>
+						<font style="margin-left: 2px;color:#007AFF ;">
+							丨
+						</font>
+						<font style="margin-left: 2px;color: #A9A9A9;">
+							记录生活，留下美好...
+						</font>
 					</div>
-					<div id="list">
-					</div>
-				</ul>
+					<img src="../../image/cloud/notes_bg2.jpg" style="width: 100%;" />
+
+					<ul id="list" class="mui-table-view">
+						<!--<div id="date">
+							<div class="mui-row">
+								<div class="mui-col-sm-2 mui-col-xs-2">
+									<div class="dynamic-date">
+										<div>03.11</div>
+									</div>
+								</div>
+								<div class="mui-col-sm-10 mui-col-xs-10">
+									<div class="mui-table-view-cell">
+										<div id="content_TabId304"class="dynamic-ellipsis-show">
+											一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
+										</div>
+										<div class="show-all">显示全部</div>
+										<div class="record-imge">
+											<div class="record-imge">
+												<div class="record-picture" style="width: 70px; height: 60px; margin-right: 4px;">
+													<img id="img_33_0" src="http://qn-cspb.jiaobaowang.net/jxq/Record/thumb/0_148920857930576.png" data-preview-src="http://qn-cspb.jiaobaowang.net/jxq/Record/0_148920857930576.png"data-preview-group="33" style="width:100%;" onload="if(this.offsetHeight<this.offsetWidth){this.style.height='79.2px';this.style.width='initial';this.style.marginLeft=-(this.offsetWidth-105.60000000000001)/2+'px';}else{this.style.marginTop=-(this.offsetHeight-79.2)/2+'px';}">
+												</div>
+												<div class="record-picture" style="width: 70px; height: 60px; margin-right: 4px;">
+													<img id="img_33_0" src="http://qn-cspb.jiaobaowang.net/jxq/Record/thumb/0_148920857930576.png" data-preview-src="http://qn-cspb.jiaobaowang.net/jxq/Record/0_148920857930576.png"data-preview-group="33" style="width:100%;" onload="if(this.offsetHeight<this.offsetWidth){this.style.height='79.2px';this.style.width='initial';this.style.marginLeft=-(this.offsetWidth-105.60000000000001)/2+'px';}else{this.style.marginTop=-(this.offsetHeight-79.2)/2+'px';}">
+												</div>
+												<div class="record-picture" style="width: 70px; height: 60px; margin-right: 4px;">
+													<div class="record-picture-num" style="line-height: 60px;">+5</div>
+													<img id="img_33_0" src="http://qn-cspb.jiaobaowang.net/jxq/Record/thumb/0_148920857930576.png" data-preview-src="http://qn-cspb.jiaobaowang.net/jxq/Record/0_148920857930576.png"data-preview-group="33" style="width:100%;" onload="if(this.offsetHeight<this.offsetWidth){this.style.height='79.2px';this.style.width='initial';this.style.marginLeft=-(this.offsetWidth-105.60000000000001)/2+'px';}else{this.style.marginTop=-(this.offsetHeight-79.2)/2+'px';}">
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>-->
+					</ul>
+				</div>
 			</div>
 		</div>
-
-			<script>
-				mui.init({
-					pullRefresh: {
-						container: '#pullrefresh',
-						down: {
-							callback: pulldownRefresh
-						},
-						up: {
-							contentrefresh: '正在加载...',
-							callback: pullupRefresh
-						}
+		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<script type="text/javascript" src="../../js/quan/studentdynamic.js"></script>
+		<script type="text/javascript">
+			mui.init({
+				pullRefresh: {
+					container: '#pullrefresh',
+					down: {
+						callback: pulldownRefresh
+					},
+					up: {
+						contentrefresh: '正在加载...',
+						callback: pullupRefresh
 					}
-				});
-
-				/**
-				 * 下拉刷新具体业务实现
-				 */
-				function pulldownRefresh() {
-					setTimeout(function() {
-						//刷新时将页码归1
-						totalCnt = 0;
-						flag = 1;
-						var comData = {
-							userId: userId, //用户ID
-							publisherId: userId, //发布用户ID
-							noteType: '1', //信息类型,1云笔记,2个人空间动态
-							pageIndex: (1).toString(), //当前页数
-							pageSize: '10' //每页记录数
-						};
-						//请求数据
-						requestData(comData);
-//						mui('#pullrefresh').pullRefresh().refresh(true);//重置上拉加载
-						mui('#pullrefresh').pullRefresh().enablePullupToRefresh();
-					}, 1500);
 				}
+			});
 
-				/**
-				 * 上拉加载具体业务实现
-				 */
-				function pullupRefresh() {
-					setTimeout(function() {
-						flag = 2;
-						if(tempPage * 10 > totalCnt || tempPage * 10 == totalCnt) {
-							mui.toast('没有更多了...');
-							mui('#pullrefresh').pullRefresh().endPullupToRefresh(true); //参数为true代表没有更多数据了。
-						} else {
-							tempPage++;
-							var comData = {
-								userId: userId, //用户ID
-								publisherId: userId, //发布用户ID
-								noteType: '1', //信息类型,1云笔记,2个人空间动态
-								pageIndex: (tempPage).toString(), //当前页数
-								pageSize: '10' //每页记录数
-							};
-							//请求数据
-							requestData(comData);
-						}
-					}, 1500);
-				}
-
-				//页码，请求第几页数据
-				var tempPage = 1;
-				//当前档案的总条数
-				var totalCnt = 0;
-				//判断是加载更多2，还是刷新1
-				var flag = 1;
-				//页码请求到要显示的数据
-				var recordArray = [];
-				var userId = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-
-				var table=null;
-				var lastDate = ''; //上一条记录的日期
-				var today = ''; //记录今天日期
-
-				mui.plusReady(function() {
-
-					//---初始化界面---start---
-					var myDate = new Date();
-					today = myDate.getFullYear() + '' + (myDate.getMonth() + 1) + myDate.getDate();
-//					table = document.getElementById("ul_table");
-					table=document.getElementById("list");
-
-					//---初始化界面---end---
-
+			/**
+			 * 下拉刷新具体业务实现
+			 */
+			function pulldownRefresh() {
+				setTimeout(function() {
+					//刷新时将页码归1
+					totalCnt = 0;
+					flag = 1;
 					var comData = {
 						userId: userId, //用户ID
 						publisherId: userId, //发布用户ID
 						noteType: '1', //信息类型,1云笔记,2个人空间动态
-						pageIndex: (tempPage).toString(), //当前页数
+						pageIndex: '1', //当前页数
 						pageSize: '10' //每页记录数
 					};
 					//请求数据
 					requestData(comData);
-					document.getElementById('add').addEventListener('tap', function() {
-						events.openNewWindow('app_notes_create.html');
-					});
+					mui('#pullrefresh').pullRefresh().enablePullupToRefresh();
+				}, 1500);
+			}
 
-					window.addEventListener('refreshView',function () {
-					       pulldownRefresh();
-					});
+			/**
+			 * 上拉加载具体业务实现
+			 */
+			function pullupRefresh() {
+				setTimeout(function() {
+					flag = 2;
+					if(tempPage * 10 > totalCnt || tempPage * 10 == totalCnt) {
+						mui.toast('没有更多了...');
+						mui('#pullrefresh').pullRefresh().endPullupToRefresh(true); //参数为true代表没有更多数据了。
+					} else {
+						tempPage++;
+						var comData = {
+							userId: userId, //用户ID
+							publisherId: userId, //发布用户ID
+							noteType: '1', //信息类型,1云笔记,2个人空间动态
+							pageIndex: (tempPage).toString(), //当前页数
+							pageSize: '10' //每页记录数
+						};
+						//请求数据
+						requestData(comData);
+					}
+				}, 1500);
+			}
+
+			//页码，请求第几页数据
+			var tempPage = 1;
+			//当前档案的总条数
+			var totalCnt = 0;
+			//判断是加载更多2，还是刷新1
+			var flag = 1;
+			//页码请求到要显示的数据
+			var recordArray = [];
+			var userId = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+
+			var table = null;
+			var markDate = ''; //记录日期
+			var today = ''; //记录今天日期
+
+			mui.plusReady(function() {
+
+				//---初始化界面---start---
+				var myDate = new Date();
+				today = myDate.getFullYear() + '-' + (myDate.getMonth() + 1) + '-' + myDate.getDate();
+				table = document.getElementById("list");
+
+				//---初始化界面---end---
+
+				var comData = {
+					userId: userId, //用户ID
+					publisherId: userId, //发布用户ID
+					noteType: '1', //信息类型,1云笔记,2个人空间动态
+					pageIndex: (tempPage).toString(), //当前页数
+					pageSize: '10' //每页记录数
+				};
+				//请求数据
+				requestData(comData);
+				document.getElementById('add').addEventListener('tap', function() {
+					events.openNewWindow('app_notes_create.html');
 				});
 
-				//请求数据
-				function requestData(comData) {
-					// 等待的对话框
-					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-					//28.（用户空间）获取用户针对某用户的空间列表
-					postDataPro_getUserSpacesByUserForPublisher(comData, wd, function(data) {
-						wd.close();
-						console.log('28.postDataPro_getUserSpacesByUserForPublisher:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + data.RspData.TotalCnt);
-						if(data.RspCode == 0) {
-							var tempRspData = data.RspData.Data;
-							//判断是加载更多2，还是刷新1
-							if(flag == 1) {
-								tempPage = 1;
-								recordArray = tempRspData;
-								table.innerHTML='';//情况界面的列表
-								lastDate = '';
-								mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //下拉刷新结束
+				window.addEventListener('refreshView', function() {
+					pulldownRefresh();
+				});
+			});
 
-							} else {
-								//合并数组
-								recordArray = recordArray.concat(tempRspData);
-							}
-							if(flag ==2){
-								mui('#pullrefresh').pullRefresh().endPullupToRefresh();//结束上拉加载
-							}
+			//请求数据
+			function requestData(comData) {
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//28.（用户空间）获取用户针对某用户的空间列表
+				postDataPro_getUserSpacesByUserForPublisher(comData, wd, function(data) {
+					wd.close();
+					console.log('28.postDataPro_getUserSpacesByUserForPublisher:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + data.RspData.TotalCnt);
+					if(data.RspCode == 0) {
+						var tempRspData = data.RspData.Data;
+						//判断是加载更多2，还是刷新1
+						if(flag == 1) {
+							tempPage = 1;
+							recordArray = tempRspData;
+							table.innerHTML = ''; //情况界面的列表
+							lastDate = '';
+							mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //下拉刷新结束
 
-							mui.each(tempRspData, function(index, item) {
-								console.log(index + '|' + JSON.stringify(item));
-								createNotes(item);
-							});
-
-							//档案总条数
-							totalCnt = data.RspData.TotalCnt;
-							//为空
-							if(recordArray.length==0 && tempRspData.length==0){
-								mui.toast('笔记为空');
-								mui('#pullrefresh').pullRefresh().disablePullupToRefresh();//禁用上拉刷新
-							}
-							//获取得到的数据小于10条说明没有下一页
-							if(tempRspData.length < 10 && recordArray.length > 10){
-								console.log(tempRspData.length+'|'+recordArray.length);
-								mui('#pullrefresh').pullRefresh().endPullupToRefresh(true); //参数为true代表没有更多数据了。
-							}else if(tempRspData.length < 10 && recordArray.length < 10){
-								mui('#pullrefresh').pullRefresh().disablePullupToRefresh();//禁用上拉刷新
-							}else{
-								mui('#pullrefresh').pullRefresh().enablePullupToRefresh();//启用上拉刷新
-							}
 						} else {
-							mui.toast(data.RspTxt);
+							//合并数组
+							recordArray = recordArray.concat(tempRspData);
 						}
-					});
+						if(flag == 2) {
+							mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //结束上拉加载
+						}
+
+						for(var i = 0; i < tempRspData.length; i++) {
+							createNotes(tempRspData[i]);
+						}
+						//console.log(document.getElementById("list").innerHTML);
+
+						//档案总条数
+						totalCnt = data.RspData.TotalCnt;
+						//为空
+						if(recordArray.length == 0 && tempRspData.length == 0) {
+							mui.toast('笔记为空');
+							mui('#pullrefresh').pullRefresh().disablePullupToRefresh(); //禁用上拉刷新
+						}
+						//获取得到的数据小于10条说明没有下一页
+						if(tempRspData.length < 10 && recordArray.length > 10) {
+							console.log(tempRspData.length + '|' + recordArray.length);
+							mui('#pullrefresh').pullRefresh().endPullupToRefresh(true); //参数为true代表没有更多数据了。
+						} else if(tempRspData.length < 10 && recordArray.length < 10) {
+							mui('#pullrefresh').pullRefresh().disablePullupToRefresh(); //禁用上拉刷新
+						} else {
+							mui('#pullrefresh').pullRefresh().enablePullupToRefresh(); //启用上拉刷新
+						}
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
+
+			/**
+			 * 界面中创建一条记录
+			 * @param {Object} item
+			 */
+			function createNotes(data) {
+				console.log('createNotes ' + JSON.stringify(data));
+				//				//将时间参数分隔，结果为["2016","11","21"]
+				//				var PublishDate = item.PublishDate.split(' ')[0].split('-');
+				//				//console.log('PublishDate:' + JSON.stringify(PublishDate));
+				//				//console.log('today:' + today);
+				//				var time = PublishDate[0] + PublishDate[1] + PublishDate[2];
+				//				//console.log('time:' + time);
+				//
+				//				var itemData = [
+				//					[PublishDate[1]+'.', PublishDate[2]], item.MsgContent
+				//				];
+				//				//设置时间
+				//				if(time == today) { //日期和今天相同
+				//					itemData[0] = '今天';
+				//				}
+				//				if(lastDate == time) { //上一个记录的日期和本记录的日期相同
+				//					itemData[0] = '';
+				//				}
+				//				var imageArray = item.EncAddr.split('|');
+				//				var thumbArray = item.EncImgAddr.split('|');
+				//
+				//				if(item.EncImgAddr!=''){
+				//					itemData.push(thumbArray[0]);
+				//				}
+				//
+				//				//生成界面
+				//				studentdynamic.additem3(table, itemData, 'TabId' + item.TabId);
+				//				lastDate = time;
+
+				var date = data.PublishDate.split(' '); //发布的日期和时间
+				var dateItem = date[0]; //日期
+				var time = date[0].split('-'); //时间
+				var timeItem = time[1] + '.' + time[2];
+				console.log('dateItem ' + dateItem);
+				//console.log('timeItem ' + timeItem);
+				if(markDate != dateItem) {
+					markDate = dateItem;
+					var element = document.createElement('div');
+					element.id = markDate;
+					document.getElementById("list").appendChild(element);
 				}
-
-				/**
-				 * 界面中创建一条记录
-				 * @param {Object} item
-				 */
-				function createNotes(item) {
-
-					//将时间参数分隔，结果为["2016","11","21"]
-					var PublishDate = item.PublishDate.split(' ')[0].split('-');
-					//console.log('PublishDate:' + JSON.stringify(PublishDate));
-					//console.log('today:' + today);
-					var time = PublishDate[0] + PublishDate[1] + PublishDate[2];
-					//console.log('time:' + time);
-
-					var itemData = [
-						[PublishDate[1]+'.', PublishDate[2]], item.MsgContent
-					];
-					//设置时间
-					if(time == today) { //日期和今天相同
-						itemData[0] = '今天';
-					}
-					if(lastDate == time) { //上一个记录的日期和本记录的日期相同
-						itemData[0] = '';
-					}
-					var imageArray = item.EncAddr.split('|');
-					var thumbArray = item.EncImgAddr.split('|');
-
-					if(item.EncImgAddr!=''){
-						itemData.push(thumbArray[0]);
-					}
-
-					//生成界面
-					studentdynamic.additem3(table, itemData, 'TabId' + item.TabId);
-					lastDate = time;
+				console.log('today ' + today);
+				if(dateItem == today) {
+					timeItem = '今天';
 				}
+				var element = document.createElement('div');
+				element.className = 'mui-row';
+				element.innerHTML = '<div class="mui-col-sm-2 mui-col-xs-2">\
+									<div class="dynamic-date"><div>' + timeItem + '</div></div></div>\
+								<div class="mui-col-sm-10 mui-col-xs-10">\
+									<div class="mui-table-view-cell">123</div></div>';
+				document.getElementById(dateItem).appendChild(element);
+
+			}
 		</script>
 	</body>
 
