1、切换底部栏 与我相关未读数为题 2、修改个人空间和展现时间格式 3、修改添加评论界面

--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -629,8 +629,8 @@
 			tempModel.uimg = updateHeadImg(tempModel.uimg)
 
 			var personalImage = tempModel.uimg;
-			var personalName = tempModel.unick;
-			var time = tempModel.PublishDate;
+			var personalName =events.shortForString(tempModel.unick, 15) ;
+			var time = modifyTimeFormat(tempModel.PublishDate);
 			var contentText = tempModel.MsgContent;
 			InfoList.push(personalImage);
 			InfoList.push(personalName);
