--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -52,8 +52,8 @@
 
 			#question_title {
 				text-align: justify;
-				color: #222222;
-				font-weight: bold;
+				color: #323232;
+				line-height: 22px;
 			}
 
 			#question_content {
