修改笔记的下拉刷新上拉加载方式

--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -113,7 +113,7 @@
 					console.log('38postDataPro_addUserSpace（用户空间）新增某用户空间信息 （云笔记）.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 					if(data.RspCode == 0) {
 						mui.toast('发布成功');
-						events.fireToPageNone('app_notes_sub.html', 'refreshView');
+						events.fireToPageNone('app_notes_main.html', 'refreshView');
 						mui.back();
 					} else {
 						mui.toast(data.RspTxt);
