--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -9,8 +9,106 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
-		<script src="../../js/mui.min.js"></script>
-		<script type="text/javascript" src="../../js/utils/events.js" ></script>
+		<link rel="stylesheet" href="../../css/utils/preview.css" />
+		<link rel="stylesheet" href="../../css/utils/pullToRefresh.css" />
+
+		<style>
+			body,
+			.mui-content {
+				background: white;
+			}
+
+			.mui-table-view:after {
+				height: 0px;
+			}
+
+			#add {
+				background: white;
+				position: absolute;
+				top: 85px;
+				width: 96%;
+				min-height: 40px;
+				line-height: 40px;
+				border-radius: 5px;
+				left: 2%;
+			}
+
+			.mui-table-view:before,
+			.mui-table-view:after,
+			.mui-table-view-cell:after {
+				height: 0px;
+			}
+
+			.mui-col-sm-10 {
+				background: #EEEEEE;
+			}
+
+			.mui-table-view-cell {
+				padding: 8px;
+				margin: 0px;
+			}
+
+			.mui-table-view-cell.mui-active {
+				background: #D9D9D9;
+			}
+
+			.dynamic-ellipsis-show {
+				overflow: hidden;
+				text-overflow: ellipsis;
+				display: -webkit-box;
+				-webkit-line-clamp: initial;
+				-webkit-box-orient: vertical;
+				font-size: 1.5rem;
+				line-height: 24px;
+			}
+
+			.dynamic-date-parent {
+				margin-bottom: 20px;
+			}
+
+			.dynamic-date {
+				/*日期*/
+				font-weight: bold;
+				/*加粗*/
+				margin-top: 4px;
+			}
+
+			.mui-row {
+				margin: 5px 15px;
+				word-break: break-all;
+			}
+
+			.record-imge {
+				width: 100%;
+			}
+
+			.record-picture {
+				overflow: hidden;
+				position: relative;
+				float: left;
+				text-align: center;
+			}
+
+			.record-picture-num {
+				/*剩余图片数量*/
+				position: absolute;
+				color: white;
+				background-color: rgba(0, 0, 0, .3);
+				width: 100%;
+				font-size: 25px;
+			}
+
+			.show-all {
+				display: none;
+				color: #CCCCCC;
+				font-size: 1.4rem;
+			}
+
+			.mui-pull-bottom-wrapper {
+				/*底部加载更多区域*/
+				background-color: white;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -19,35 +117,279 @@
 			<h1 class="mui-title">我的云盘—笔记</h1>
 		</header>
 
-		<div class="mui-content"></div>
+		<div id="pullrefresh" class="mui-content mui-scroll-wrapper" style="z-index: 1;">
+			<div class="mui-scroll">
+				<!--数据列表-->
+				<div id="top">
+					<div id="add">
+						<font style="margin-left: 5%;">
+							<span class="mui-icon mui-icon-camera" style="color: #A9A9A9;"></span>
+						</font>
+						<font style="margin-left: 2px;color:#007AFF ;">
+							丨
+						</font>
+						<font style="margin-left: 2px;color: #A9A9A9;">
+							记录生活，留下美好...
+						</font>
+					</div>
+					<img src="../../image/cloud/notes_bg2.jpg" style="width: 100%;" />
+					<ul id="list" class="mui-table-view">
+					</ul>
+				</div>
+			</div>
+		</div>
 	</body>
-
+	<script src="../../js/mui.min.js"></script>
+	<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+	<script type="text/javascript" src="../../js/utils/events.js"></script>
+	<script type="text/javascript" src="../../js/quan/studentdynamic.js"></script>
+	<script type="text/javascript" src="../../js/mui.zoom.js"></script>
+	<script type="text/javascript" src="../../js/mui.previewimage.js"></script>
+	<script type="text/javascript" src="../../js/mui.pullToRefresh.js"></script>
+	<script type="text/javascript" src="../../js/mui.pullToRefresh.material.js"></script>
 	<script type="text/javascript">
-		//启用双击监听
-		mui.init({
-			gestureConfig: {
-				doubletap: true
-			},
-			subpages: [{
-				url: 'app_notes_sub.html',
-				id: 'app_notes_sub.html',
-				styles: {
-					top: (localStorage.getItem('StatusHeightNo') * 1 + 45) + 'px',
-					bottom: '0px'
+		mui.init();
+		var markDate = ''; //记录日期
+		var today = ''; //记录今天日期
+		var previewImage; //查看图片的控件
+		var pullRefresh; //下拉，上拉控件
+
+		mui.plusReady(function() {
+			previewImage = mui.previewImage();
+
+			var deceleration = mui.os.ios ? 0.003 : 0.0009;
+			mui('.mui-scroll-wrapper').scroll({
+				bounce: false,
+				indicators: true, //是否显示滚动条
+				deceleration: deceleration
+			});
+
+			//初始化下拉，上拉控件
+			pullRefresh = mui('.mui-scroll-wrapper .mui-scroll').pullToRefresh({
+				down: {
+					callback: function() {
+						var self = this;
+						var element = document.getElementById('pullrefresh');
+						var page = JSON.parse(element.getAttribute('data-page'));
+						console.log('down ' + JSON.stringify(page));
+						setTimeout(function() {
+							requestData(1);
+							self.endPullDownToRefresh(); //结束下拉刷新
+						}, 1500);
+					}
+				},
+				up: {
+					contentinit: '', //默认没有更多显示空白
+					callback: function() {
+						var self = this;
+						var element = document.getElementById('pullrefresh');
+						var page = JSON.parse(element.getAttribute('data-page'));
+						console.log('up ' + JSON.stringify(page));
+						if(page) {
+							setTimeout(function() {
+								requestData(page.pageIndex + 1);
+								self.endPullUpToRefresh();
+							}, 1500);
+						} else {
+							setTimeout(function() {
+								mui.toast('数据异常，请下拉刷新后重新尝试');
+								self.endPullUpToRefresh();
+							}, 1500);
+						}
+					}
 				}
-			}]
+			});
+			//---初始化界面---start---
+			var myDate = new Date();
+			var month = myDate.getMonth() + 1;
+			if(month.length = 1) {
+				month = '0' + month;
+			}
+			today = myDate.getFullYear() + '-' + month + '-' + myDate.getDate();
+
+			//---初始化界面---end---
+			//请求数据
+			requestData(1);
+
+			document.getElementById('add').addEventListener('tap', function() {
+				events.openNewWindow('app_notes_create.html');
+			});
+
+			window.addEventListener('refreshView', function() {
+				requestData(1);
+			});
+
+			mui('#list').on('tap', '.show-all', function() {
+				var str = this.innerText;
+				var id = this.id.replace('_show', '');
+				if(str == '显示全部') {
+					this.innerText = '收起';
+					document.getElementById(id + "_content").style.webkitLineClamp = 'inherit';
+				} else if(str == '收起') {
+					this.innerText = '显示全部';
+					document.getElementById(id + "_content").style.webkitLineClamp = '3';
+				}
+			});
+
+			//点击图片的数字
+			mui('#list').on('tap', '.record-picture-num', function() {
+				previewImage.open(document.getElementById("img_" + this.getAttribute('data-id')));
+			});
 		});
 
-		var contentWebview = null;
-		document.querySelector('header').addEventListener('doubletap', function() {
-			if(contentWebview == null) {
-				contentWebview = plus.webview.currentWebview().children()[0];
+		//请求数据
+		function requestData(pageIndex) {
+			var userId = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+
+			var comData = {
+				userId: userId, //用户ID
+				publisherId: userId, //发布用户ID
+				noteType: '1', //信息类型,1云笔记,2个人空间动态
+				pageIndex: pageIndex, //当前页数
+				pageSize: '10' //每页记录数
+			};
+			// 等待的对话框
+			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			//28.（用户空间）获取用户针对某用户的空间列表
+			postDataPro_getUserSpacesByUserForPublisher(comData, wd, function(data) {
+				console.log('28.postDataPro_getUserSpacesByUserForPublisher:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + data.RspData.TotalCnt);
+
+				//记录页数
+				var page = {
+					pageIndex: pageIndex, //当前页数
+					totalPage: 0 //总页数
+				};
+				if(data.RspCode == 0) {
+					page.totalPage = data.RspData.TotalPage;
+				}
+				document.getElementById('pullrefresh').setAttribute('data-page', JSON.stringify(page))
+				if(page.pageIndex == 1) { //获取的第一页的内容
+					//清空对应的界面
+					document.getElementById('list').innerHTML = '';
+				}
+
+				if(data.RspCode == 0) {
+					var tempRspData = data.RspData.Data;
+					for(var i = 0; i < tempRspData.length; i++) {
+						createNotes(tempRspData[i]);
+					}
+					//console.log(document.getElementById("list").innerHTML);
+					if(data.RspData.Data.length == 0 && pageIndex == 1) {
+						mui.toast('笔记为空');
+					}
+				} else {
+					mui.toast(data.RspTxt);
+				}
+
+				if(page.pageIndex >= page.totalPage) {
+					//没有下一页
+					pullRefresh.endPullUpToRefresh(true);
+				} else {
+					if(page.pageIndex == 1) {
+						//获取第一页的数据更新当前控件
+						pullRefresh.refresh(true);
+					}
+				}
+				setTimeout(function() {
+					wd.close();
+				}, 500);
+			});
+		}
+
+		/**
+		 * 界面中创建一条记录
+		 * @param {Object} item
+		 */
+		function createNotes(data) {
+			//console.log('createNotes ' + JSON.stringify(data));
+
+			var date = data.PublishDate.split(' '); //发布的日期和时间
+			var dateItem = date[0]; //日期
+			var time = date[0].split('-'); //时间
+			var timeItem = time[1] + '.' + time[2];
+			//console.log('dateItem ' + dateItem);
+			//console.log('timeItem ' + timeItem);
+			if(markDate != dateItem) {
+				var element = document.createElement('div');
+				element.className = 'dynamic-date-parent'
+				element.id = dateItem;
+				document.getElementById("list").appendChild(element);
 			}
-			contentWebview.evalJS("mui('#pullrefresh').pullRefresh().scrollTo(0,0,100)");
-		});
-		mui.plusReady(function () {
-		    events.changeTopPocket();
-		});
+
+			if(dateItem == today) {
+				timeItem = '今天';
+			}
+			if(markDate == dateItem) {
+				timeItem = '';
+			}
+
+			var html_media = ''; //多媒体
+
+			var width = (document.getElementById(dateItem).offsetWidth * 0.8 - 32) * 0.32;
+			var height = width * 3 / 4;
+			var marginBottom = (document.getElementById(dateItem).offsetWidth * 0.8 - 32) * 0.02;
+			var marginRight;
+
+			if(data.EncType == 1) { //附件类型,1图片2音视频3仅文字
+				var imageArray = data.EncAddr.split('|');
+				var thumbArray = data.EncImgAddr.split('|');
+
+				var html_0 = '<div class="record-imge">';
+				var html_1 = '';
+				var html_2 = ''; //显示剩余的图片数量
+				var html_3 = ''; //是否显示图片
+				for(var i = 0; i < imageArray.length; i++) {
+					if(i == 2 || i == 5 || i == 8) {
+						marginRight = 0;
+					} else {
+						marginRight = marginBottom;
+					}
+					if(i > 2) {
+						html_3 = 'display: none;';
+					}
+					if(i == 2 && imageArray.length > 3) {
+						html_2 = '<div data-id="' + data.TabId + '_' + i + '" class="record-picture-num" style="line-height: ' + (height + 1) + 'px;">+' + (imageArray.length - 3) + '</div>'
+					}
+					html_1 = html_1 + '<div class="record-picture" style="width: ' + width + 'px; height: ' + height + 'px; margin-right: ' + marginRight + 'px;' + html_3 + '">\
+									' + html_2 + '<img id="img_' + data.TabId + '_' + i + '" src="' + thumbArray[i] + '" data-preview-src="' + imageArray[i] + '" data-preview-group="' + data.TabId + '" style="width:100%;" onload="if(this.offsetHeight<this.offsetWidth){this.style.height=\'' + height + 'px\';this.style.width=\'initial\';this.style.marginLeft=-(this.offsetWidth-' + width + ')/2+\'px\';}else{this.style.marginTop=-(this.offsetHeight-' + height + ')/2+\'px\';}">\
+								</div>';
+				}
+				html_media = html_0 + html_1 + '</div>';
+			}
+
+			var element = document.createElement('div');
+			element.className = 'mui-row';
+			element.innerHTML = '<div class="mui-col-sm-2 mui-col-xs-2">\
+										<div class="dynamic-date">\
+											<div>' + timeItem + '</div>\
+										</div>\
+									</div>\
+									<div class="mui-col-sm-10 mui-col-xs-10">\
+										<div class="mui-table-view-cell">\
+											<div id="' + data.TabId + '_content" class="dynamic-ellipsis-show"></div>\
+											<div id="' + data.TabId + '_show" class="show-all">显示全部</div>' + html_media + '\
+										</div>\
+									</div>';
+			document.getElementById(dateItem).appendChild(element);
+			if(data.MsgContent == '') {
+				document.getElementById(data.TabId + '_content').style.display = 'none';
+			} else {
+				var height_0;
+				var height_1;
+				var contentEl = document.getElementById(data.TabId + '_content');
+				contentEl.innerText = data.MsgContent;
+
+				contentEl.style.webkitLineClamp = '4';
+				height_0 = contentEl.offsetHeight;
+				contentEl.style.webkitLineClamp = '3';
+				height_1 = contentEl.offsetHeight;
+				if(height_0 > height_1) {
+					//内容高度大于三行
+					document.getElementById(data.TabId + "_show").style.display = 'inline';
+				}
+			}
+			markDate = dateItem;
+		}
 	</script>
 
 </html>
