--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -67,12 +67,12 @@
 			}
 
 			.dynamic-date-year-parent {
-				width: 20%;
+				width: 16.6%;
+				margin-left: 15px;
 			}
 
 			.dynamic-date-year {
 				font-weight: bold;
-				text-align: center;
 				font-size: 1.8rem;
 			}
 
@@ -161,6 +161,7 @@
 		mui.init();
 		var markDate = ''; //记录日期
 		var today = ''; //记录今天日期
+		var year = ''; //记录年份
 		var previewImage; //查看图片的控件
 		var pullRefresh; //下拉，上拉控件
 
@@ -276,6 +277,7 @@
 				if(page.pageIndex == 1) { //获取的第一页的内容
 					//清空对应的界面
 					document.getElementById('list').innerHTML = '';
+					year = ''; //清空年份
 				}
 
 				if(data.RspCode == 0) {
@@ -317,12 +319,14 @@
 			var dateItem = date[0]; //日期
 			var time = date[0].split('-'); //时间
 			var timeItem = time[1] + '.' + time[2];
-			var year = today.split('-')[0];
 			var yearItem = dateItem.split('-')[0];
-			if(year == yearItem) {
-				year = '';
+			if(year == yearItem) {//同一年
+				yearItem = '';
 			} else {
-				year = yearItem;
+				year = yearItem;//新的一年
+			}
+			if(year == today.split('-')[0]){//今年
+				yearItem = '';
 			}
 			//console.log('dateItem ' + dateItem);
 			//console.log('timeItem ' + timeItem);
@@ -330,7 +334,7 @@
 				var element = document.createElement('div');
 				element.className = 'dynamic-date-parent'
 				element.id = dateItem;
-				element.innerHTML = '<div class="dynamic-date-year-parent"><div class="dynamic-date-year">' + year + '</div></div>';
+				element.innerHTML = '<div class="dynamic-date-year-parent"><div class="dynamic-date-year">' + yearItem + '</div></div>';
 				document.getElementById("list").appendChild(element);
 			}
 
