--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -53,7 +53,9 @@ var sliderId = ''; //记录显示的城市
 var index; //获取index的webview
 var personalUTID = myStorage.getItem(storageKeyName.PERSONALINFO).utid;
 var userIDs; //关注的用户
+var SCREEN_WIDTH;
 mui.plusReady(function() {
+	SCREEN_WIDTH = plus.screen.resolutionWidth; 
 	mui.previewImage();
 	var main = plus.webview.currentWebview(); //获取当前窗体对象
 	index = plus.webview.getWebviewById('index.html'); //
