调整求知提问详情的图片显示

--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -285,7 +285,7 @@
 					for(var i = 0; i < tempRspData.length; i++) {
 						createNotes(tempRspData[i]);
 					}
-					console.log(document.getElementById("list").innerHTML);
+					//console.log(document.getElementById("list").innerHTML);
 					if(data.RspData.Data.length == 0 && pageIndex == 1) {
 						mui.toast('笔记为空');
 					}
