--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -31,14 +31,6 @@
 				height: 0px;
 			}
 
-			.mui-col-xs-4 {
-				padding: 2px;
-				height: 100px;
-				min-height: 100px;
-				margin-top: 4px;
-				margin-bottom: 7px;
-			}
-
 			#question.mui-active {
 				/*点击问题区域的效果*/
 				background: white;
@@ -63,7 +55,8 @@
 			#question_images {
 				/*问题区域的图片*/
 				margin-top: 5px;
-				margin-bottom: 15px;
+				margin-bottom: 5px;
+				width: 100%;
 			}
 
 			#guanzhu {
@@ -153,19 +146,6 @@
 				color: #808080;
 			}
 
-			.ellipsis-3 {
-				/*回答内容*/
-				display: -webkit-box;
-				overflow: hidden;
-				white-space: normal !important;
-				text-overflow: ellipsis;
-				word-wrap: break-word;
-				-webkit-line-clamp: 3;
-				-webkit-box-orient: vertical;
-				margin-top: 10px;
-				color: #323232;
-			}
-
 			.ellipsis-show {
 				/*内容*/
 				display: -webkit-box;
@@ -181,6 +161,17 @@
 				display: none;
 				color: #D7D7D7;
 				margin-top: 10px;
+			}
+
+			.record-imge {
+				width: 100%;
+			}
+
+			.record-picture {
+				overflow: hidden;
+				position: relative;
+				float: left;
+				text-align: center;
 			}
 		</style>
 	</head>
@@ -200,7 +191,7 @@
 					<li id="question" class="mui-table-view-cell mui-media">
 						<div class="mui-media-body">
 							<h4 id="question_title"></h4>
-							<div id="question_images" class="mui-row"></div>
+							<div id="question_images"></div>
 							<div id="question_content" class="ellipsis-show">
 							</div>
 							<div id="showAll">显示全部</div>
