--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllAnswer.html
@@ -229,6 +229,9 @@
 							//合并数组
 							answerArray = answerArray.concat(data.RspData.Data);
 						}
+						if(mui(".mui-table-view-cell").length < 10) {
+							mui(".mui-pull-loading")[0].innerHTML = "";
+						}
 						setAnswerRecord(data.RspData.Data);
 					} else {
 						mui.toast(data.RspTxt);
@@ -263,7 +266,7 @@
 					'</h4><h5>' +
 					record.AnswerContent +
 					'</h5>' +
-					'<p class="mui-h6 mui-ellipsis">' + record.IsLikeNum + '赞 ' + record.CommentNum + '评论 ' + modifyTimeFormat(record.AnswerTime) +
+					'<p class="mui-h6 mui-ellipsis">' + record.IsLikeNum + '赞·' + record.CommentNum + '评论·' + modifyTimeFormat(record.AnswerTime) +
 					'</p></div></div>';
 				listContainer.appendChild(li);
 			}
