--- a/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/AttentionPersons.html
@@ -14,7 +14,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">关注他的人</h1>
+			<h1 id="title" class="mui-title">关注他的人</h1>
 		</header>
 		<!--下拉刷新容器-->
 		<div id="refreshContainer" class="mui-content mui-fullscreen" style="z-index:0">
